section4 Spring Security를 이용한 인증 처리 + API 사용을 위한 사용자 인증 처리 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ server:
 spring:
   message:
     basename: messages
+#  security:
+#    user:
+#      name: username
+#      password: pass1234
 
 management:
   endpoints:
